# GuitarChordsPlayer

./: CMakeLists.txt  README.md
include/: PlayerWeight.h
src/: PlayerWeight.cpp  gui.ui  main.cpp
